[package]
name = "pyo3_rust_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_rust_ffi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"

[build-dependencies]
pyo3-build-config = "0.24.0"
